--- a/app/簡易仕様書.md
+++ b/app/簡易仕様書.md
@@ -1,54 +1,51 @@
-レストランサーチアプリ簡易仕様書
-=================================
+# 簡易仕様書
 
-対象OS
---------------
-Android12　以上
+### 作者
+岸拓海
+### アプリ名
+GourmetSearcher
 
-開発言語、開発環境
---------------
-Kotlin、AndroidStudio
-
-開発期間
---------------
-4/6 ～ 4/18
-
-機能概要
---------------
-現在地から300m、500m、1000m、2000m、3000mの任意の距離内に存在する飲食店を検索する。
-
-画面概要
---------------
-* 検索画面
-* 検索結果一覧表示画面
-* 詳細画面
-    
-使用ライブラリ
---------------
-* Compose
-* Retrofit
-* Google Play Services Location
-  
-コンセプト
---------------
+#### コンセプト
 簡易な操作で周辺の飲食店を検索する。
 
-こだわり
---------------
-アプリ起動時にインターネットに繋がってなかったり、位置情報が取得できなかったりしても、問題なく操作を行うことができる。
+#### こだわったポイント
+アプリ起動時にインターネットに繋がってなかったり、位置情報が取得できなかったりしても、問題なく操作を行うことができる。また色数を減らし、アイコンを使用するなど、見やすく直感的に操作できるように心掛けた。
 
-デザイン面でのこだわり
---------------
-色数を減らし、アイコンを使用するなど、見やすく直感的に操作できるように心掛けた。
+## 開発環境
+### 開発環境
+AndroidStudio 3.1.21
 
-アドバイスしてほしい点
---------------
+### 開発言語
+Kotlin
+
+## 動作対象端末・OS
+### 動作対象OS
+Android 12
+
+## 開発期間
+10日間
+
+## アプリケーション機能
+
+### 機能一覧
+- レストラン検索：ホットペッパーグルメサーチAPIを使用して、現在地周辺の飲食店を検索する。
+- レストラン情報取得：ホットペッパーグルメサーチAPIを使用して、飲食店の詳細情報を取得する。
+
+### 画面一覧
+- 検索画面 ：条件を指定してレストランを検索する。
+- 一覧画面 ：検索結果の飲食店を一覧表示する。
+- 詳細画面 ：選択した飲食店の詳細情報を表示する。
+
+### 使用しているAPI,SDK,ライブラリなど
+- ホットペッパーグルメサーチAPI
+- Jetpack Compose
+- Retrofit
+- Google Play Services Location
+
+### アドバイスして欲しいポイント
 パッケージの分け方やViewModelに何の機能を持たせるべきか、などコードの管理が分からなかった。
 
-自己評価
---------------
-アプリを作るのは初めで、調べながら進めていったので付け焼刃感が否めませんが、必要十分なことはできたのでほっとします。
-また、お気に入り機能をデータベースを使って実装しようとしましたが、途中でエラーが解決できなくなって断念しました。
-正直、もっとできたなと思う節がありますが、しっかりとしたものができたので満足しています。
+###自己評価　感想
+アプリを作るのは初めで、調べながら進めていったので付け焼刃感が否めませんが、必要十分なことはできたのでほっとしてます。ただ最低限のことしかできず、保存機能をデータベースを使って実装しようとしましたが、途中でエラーが解決できなくなって断念するなど、悔いの残る結果になりました。ただ楽しかったです。
 
 
